--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dev": "concurrently \"npm start\" \"npm run server\"",
     "test": "react-scripts test"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://ai-website-generator.onrender.com",
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
     "development": ["last 1 chrome version", "last 1 firefox version"]
